docs/v0.3.0a4/_sources/reference/_autosummary/hpcflow.sdk.persistence.json.JsonStoreEAR.rst.txt
hpcflow.sdk.persistence.json.JsonStoreEAR
=========================================

.. currentmodule:: hpcflow.sdk.persistence.json

.. autoclass:: JsonStoreEAR
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~JsonStoreEAR.decode
      ~JsonStoreEAR.encode
      ~JsonStoreEAR.to_dict
      ~JsonStoreEAR.update
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~JsonStoreEAR.commands_file_ID
      ~JsonStoreEAR.element_idx
      ~JsonStoreEAR.end_time
      ~JsonStoreEAR.exit_code
      ~JsonStoreEAR.iteration_idx
      ~JsonStoreEAR.metadata
      ~JsonStoreEAR.port_number
      ~JsonStoreEAR.run_file_ID
      ~JsonStoreEAR.run_file_idx
      ~JsonStoreEAR.run_hostname
      ~JsonStoreEAR.skip
      ~JsonStoreEAR.snapshot_end
      ~JsonStoreEAR.snapshot_start
      ~JsonStoreEAR.start_time
      ~JsonStoreEAR.submission_idx
      ~JsonStoreEAR.success
      ~JsonStoreEAR.task_ID
      ~JsonStoreEAR.id_
      ~JsonStoreEAR.is_pending
      ~JsonStoreEAR.elem_iter_ID
      ~JsonStoreEAR.action_idx
      ~JsonStoreEAR.commands_idx
      ~JsonStoreEAR.data_idx
   
   